force-app/main/default/objects/Alumni_Library_Links__c.object
<CustomObject>
    <description>Details of Alumni Library</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Type of information in the record</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Banner__c</fullName>
        <description>Field to save the Header banner</description>
        <label>Header Banner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Description__c</fullName>
        <description>Field to save the Header Description</description>
        <label>Header Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_URL__c</fullName>
        <description>Field to save the Header URL</description>
        <label>Header URL</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <description>Field to save the Image Link</description>
        <label>Image Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Field to save the Image Source URL</description>
        <label>Image URL</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Field to save the Order of the Links</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alumni Library Links</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Header_Banner__c</columns>
        <columns>Header_Description__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALL-{0000}</displayFormat>
        <label>Alumni Library Links Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Library Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>